[package]
name = "zonebuilder"
version = "0.1.0"
edition = "2021"
build = "res/build.rs"

[dependencies.native-dialog]
version = "0.7.0"
features = ["windows_dpi_awareness", "windows_visual_styles"]

[build-dependencies]
winresource = "0.1.17"

[package.metadata.winresource]
OriginalFilename = "zonebuilder.exe"
FileDescription = "ZoneBuilder"
ProductName = "github.com/iw4x"